--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
      FileName: index.html
      @version: I
      Creation: 02/06/2023
-     Last modification: 03/06/2023-->
+     Last modification: 11/23/2025 (Jenny Spicer) -->
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="src/assets/logo/icon.png">
+    <link rel="icon" type="image/x-icon" href="src/assets/logo/j.png">
     <script src="https://kit.fontawesome.com/69e14b7ae1.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Who's bl33h ?</title>
+    <title>Who is Jenny Spicer?</title>
   </head>
   <body>
     <div id="root"></div>
